--- a/.github/workflows/build-busybox.yml
+++ b/.github/workflows/build-busybox.yml
@@ -1,4 +1,4 @@
-name: Build BusyBox ARM64
+name: Build BusyBox ARM64 Full Static
 
 on:
   workflow_dispatch:
@@ -15,6 +15,9 @@ jobs:
         sudo apt install -y \
           build-essential \
           wget \
+          bc \
+          bison \
+          flex \
           gcc-aarch64-linux-gnu
 
     - name: Download BusyBox
@@ -22,18 +25,36 @@ jobs:
         wget https://busybox.net/downloads/busybox-1.36.1.tar.bz2
         tar -xf busybox-1.36.1.tar.bz2
 
-    - name: Configure BusyBox
+    - name: Configure BusyBox (All features + Static)
       run: |
         cd busybox-1.36.1
-        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
+        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- allyesconfig
+        
+        # 强制开启静态链接
+        sed -i 's/# CONFIG_STATIC is not set/CONFIG_STATIC=y/' .config
+        
+        # 关闭调试符号减小体积
+        sed -i 's/CONFIG_DEBUG.*/# CONFIG_DEBUG is not set/' .config
+        
+        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- oldconfig
 
     - name: Build BusyBox
       run: |
         cd busybox-1.36.1
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
 
-    - name: Upload BusyBox Binary
+    - name: Show Binary Info
+      run: |
+        file busybox-1.36.1/busybox
+        ls -lh busybox-1.36.1/busybox
+
+    - name: Strip Binary (Optional)
+      run: |
+        aarch64-linux-gnu-strip busybox-1.36.1/busybox
+        ls -lh busybox-1.36.1/busybox
+
+    - name: Upload BusyBox
       uses: actions/upload-artifact@v4
       with:
-        name: busybox-arm64
+        name: busybox-arm64-full-static
         path: busybox-1.36.1/busybox
