--- a/.github/workflows/build-busybox.yml
+++ b/.github/workflows/build-busybox.yml
@@ -1,4 +1,4 @@
-name: Build BusyBox ARM64 Full Static
+name: Build ARM64 BusyBox RootFS (Full Static)
 
 on:
   workflow_dispatch:
@@ -15,10 +15,11 @@ jobs:
         sudo apt install -y \
           build-essential \
           wget \
+          bzip2 \
+          gcc-aarch64-linux-gnu \
           bc \
           bison \
-          flex \
-          gcc-aarch64-linux-gnu
+          flex
 
     - name: Download BusyBox
       run: |
@@ -28,33 +29,53 @@ jobs:
     - name: Configure BusyBox (All features + Static)
       run: |
         cd busybox-1.36.1
+
+        # 生成全功能配置
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- allyesconfig
-        
-        # 强制开启静态链接
+
+        # 强制启用静态编译
         sed -i 's/# CONFIG_STATIC is not set/CONFIG_STATIC=y/' .config
-        
-        # 关闭调试符号减小体积
+
+        # 关闭调试减小体积
         sed -i 's/CONFIG_DEBUG.*/# CONFIG_DEBUG is not set/' .config
-        
-        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- oldconfig
+
+        make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
 
     - name: Build BusyBox
       run: |
         cd busybox-1.36.1
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
 
-    - name: Show Binary Info
+    - name: Create RootFS
+      run: |
+        mkdir -p rootfs/{bin,sbin,etc,proc,sys,usr/bin,usr/sbin,dev,tmp,lib}
+
+        # 安装 busybox
+        cp busybox-1.36.1/busybox rootfs/bin/
+
+        # 生成所有 applet 软链接
+        cd rootfs
+        chmod +x bin/busybox
+        ./bin/busybox --install -s .
+
+        # 创建基础文件
+        echo "::sysinit:/bin/sh" > etc/inittab
+        echo "root:x:0:0:root:/root:/bin/sh" > etc/passwd
+        echo "root:x:0:" > etc/group
+
+        mkdir -p rootfs/root
+
+    - name: Package RootFS
+      run: |
+        tar -czvf busybox-rootfs-arm64.tar.gz rootfs
+
+    - name: Show Info
       run: |
         file busybox-1.36.1/busybox
-        ls -lh busybox-1.36.1/busybox
+        ls -lh busybox-rootfs-arm64.tar.gz
 
-    - name: Strip Binary (Optional)
-      run: |
-        aarch64-linux-gnu-strip busybox-1.36.1/busybox
-        ls -lh busybox-1.36.1/busybox
-
-    - name: Upload BusyBox
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: busybox-arm64-full-static
-        path: busybox-1.36.1/busybox
+        name: busybox-rootfs-arm64
+        path: busybox-rootfs-arm64.tar.gz
