--- a/.github/workflows/arm64-mini-ultimate.yml
+++ b/.github/workflows/arm64-mini-ultimate.yml
@@ -1,4 +1,4 @@
-name: ARM64 Mini Linux FINAL
+name: ARM64 Mini Linux STABLE
 
 on:
   workflow_dispatch:
@@ -9,6 +9,7 @@ jobs:
     timeout-minutes: 120
 
     steps:
+
       ############################################################
       # Install
       ############################################################
@@ -53,7 +54,7 @@ jobs:
             CONFIG_PREFIX=../rootfs install
 
       ############################################################
-      # Dropbear
+      # Dropbear (NO PASSWORD AUTH, STATIC SAFE)
       ############################################################
       - name: Download Dropbear
         run: |
@@ -67,7 +68,11 @@ jobs:
           ./configure \
             --host=aarch64-linux-gnu \
             --disable-zlib \
+            --disable-loginfunc \
+            --disable-shadow \
+            --disable-pam \
             --enable-static \
+            CFLAGS="-DDROPBEAR_SVR_PASSWORD_AUTH=0" \
             LDFLAGS="-static"
 
           make PROGRAMS="dropbear dbclient dropbearkey scp" \
@@ -82,7 +87,7 @@ jobs:
       - name: Setup RootFS
         run: |
           cd rootfs
-          mkdir -p proc sys dev etc tmp var mnt root run
+          mkdir -p proc sys dev etc tmp var mnt root run usr/sbin
           chmod 1777 tmp
 
           echo "root:x:0:0:root:/root:/bin/sh" > etc/passwd
@@ -92,7 +97,7 @@ jobs:
 
           mkdir -p etc/init.d
 
-          printf "#!/bin/sh\nmount -t proc none /proc\nmount -t sysfs none /sys\nmount -t devtmpfs none /dev\necho ARM64 Mini Linux FINAL Ready\n" > etc/init.d/rcS
+          printf "#!/bin/sh\nmount -t proc none /proc\nmount -t sysfs none /sys\nmount -t devtmpfs none /dev\necho ARM64 Mini Linux STABLE Ready\n" > etc/init.d/rcS
 
           chmod +x etc/init.d/rcS
 
@@ -116,10 +121,10 @@ jobs:
       ############################################################
       - name: Package
         run: |
-          tar -czf arm64-mini-final.tar.gz arm64-rootfs.img
+          tar -czf arm64-mini-stable.tar.gz arm64-rootfs.img
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: arm64-mini-final
-          path: arm64-mini-final.tar.gz
+          name: arm64-mini-stable
+          path: arm64-mini-stable.tar.gz
