--- a/.github/workflows/QEMU aarch.yml
+++ b/.github/workflows/QEMU aarch.yml
@@ -39,7 +39,14 @@ jobs:
           --disable-linux-user
         make -j$(nproc)
 
-    # 5. 上传构建好的 QEMU 二进制
+    # 5. 确认二进制生成
+    - name: Check build output
+      run: |
+        cd qemu-src/aarch64-softmmu
+        echo "Listing compiled binaries:"
+        ls -lh
+
+    # 6. 上传二进制
     - name: Upload qemu-system-aarch64 binary
       uses: actions/upload-artifact@v4
       with:
