--- a/.github/workflows/QEMU aarch.yml
+++ b/.github/workflows/QEMU aarch.yml
@@ -1,4 +1,4 @@
-name: Build QEMU ARM64
+name: Build QEMU ARM64 Native
 
 on:
   workflow_dispatch:
@@ -7,46 +7,34 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
 
     env:
       PREFIX: ${{ github.workspace }}/qemu-arm64
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y \
           git python3 python3-pip \
           ninja-build pkg-config \
           libglib2.0-dev libfdt-dev libpixman-1-dev \
-          zlib1g-dev libaio-dev \
-          gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          zlib1g-dev libaio-dev
 
-    # ✅ 用 pip 安装最新版 meson
-    - name: Install latest Meson
-      run: |
         pip3 install --upgrade meson
-        meson --version
 
-    - name: Clone QEMU source
-      run: |
-        git clone --depth 1 https://github.com/qemu/qemu.git qemu-src
+    - name: Clone QEMU
+      run: git clone --depth 1 https://github.com/qemu/qemu.git qemu-src
 
-    - name: Clean old build
+    - name: Configure
       run: |
-        rm -rf qemu-build
-
-    - name: Configure (Meson cross compile)
-      run: |
-        mkdir qemu-build
-        cd qemu-build
+        mkdir build
+        cd build
 
         meson setup ../qemu-src \
-          --cross-file ../.github/cross/arm64-cross.txt \
           --prefix=${PREFIX} \
           -Dtargets=aarch64-softmmu \
           -Dvirtfs=enabled \
@@ -56,17 +44,16 @@ jobs:
 
     - name: Compile
       run: |
-        cd qemu-build
+        cd build
         ninja -j$(nproc)
         ninja install
 
-    - name: Verify binary
+    - name: Verify
       run: |
         file ${{ env.PREFIX }}/bin/qemu-system-aarch64
         ls -lh ${{ env.PREFIX }}/bin
 
-    - name: Upload ARM64 QEMU
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
-        name: qemu-system-aarch64-arm64
+        name: qemu-system-aarch64
         path: ${{ env.PREFIX }}/bin/qemu-system-aarch64
